--- a/blog/2025/05/10/01-力扣Hot100速记.md
+++ b/blog/2025/05/10/01-力扣Hot100速记.md
@@ -110,3 +110,114 @@ tags:
     >
     > ![接雨水 ##w500##r10##](PixPin_2025-05-10_16-25-27.png)
 
+## 3. 滑动窗口
+
+- [3. 无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
+
+    > 哈希表计数 + 滑窗 即可
+
+- [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
+  
+    > 哈希表计数字母 + 滑窗
+
+## 4. 子串
+
+- [560. 和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)
+
+    > 前缀和上的两数之和 (可维护右枚举左, 记得写等式推: $r - l = k \to l = r - k$, 其中 $l, r$ 为前缀和的值)
+
+- [239. 滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)
+
+    > 单调双端队列: {维护单调性 => 元素离开窗口 => 记录答案} for in nums 即可~
+
+- [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
+
+    > 哈希计数字符个数 + 触发阈值的滑窗 (如果满足字符了 => 才开始减)
+
+    ```cpp
+    class Solution {
+    public:
+        string minWindow(string s, string t) {
+            auto hash = [](char c) -> int {
+                return (c & ' ') ? c - 'a' : c - 'A' + 26;
+            };
+            array<int, 26 + 26> cntS{}, cntT{};
+            for (char c : t)
+                ++cntT[hash(c)];
+            int n = s.size(), isOk = [&]{
+                int res = 0;
+                for (int v : cntT)
+                    res += v > 0;
+                return res;
+            }();
+            int resBegin = 1e9, resLen = 1e9;
+            for (int i = 0, l = 0; i < n; ++i) {
+                int idx = hash(s[i]);
+                if (++cntS[idx] == cntT[idx])
+                    --isOk;
+                while (!isOk) {
+                    int jdx = hash(s[l]);
+                    if (cntS[jdx]-- == cntT[jdx]) {
+                        ++isOk;
+                        if (resBegin == (int)1e9 || i - l + 1 < resLen)
+                            resBegin = l, resLen = i - l + 1;
+                    }
+                    ++l;
+                }
+            }
+            return resBegin == (int)1e9
+                ? ""
+                : s.substr(resBegin, resLen);
+        }
+    };
+    ```
+
+## 5. 普通数组
+
+- [53. 最大子数组和](https://leetcode.cn/problems/maximum-subarray/)
+
+    > 贪心/dp: 如果小于0, 就不选了, 然后维护这个过程中的最大值
+
+- [56. 合并区间](https://leetcode.cn/problems/merge-intervals/)
+
+    > 排序后, 从头遍历, 看看是否答案的右端点是否 大于 当前的左端点, 如果是则 更新当前答案的右端点的最大值, 如果否, 则答案新增一个区间
+
+- [189. 轮转数组](https://leetcode.cn/problems/rotate-array/)
+
+    > 如果不想额外空间, 那么就上结论吧: 答案 = 反转整个数组 + 反转 [0, k) + 反转 [k, n)
+    >
+    > @todo: 有空把推导深入看看, 我用的是交换法, 有点难调, 发现答案是 gcd(k, n) 轮交换... 不是同一个算法吧~
+
+- [238. 除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/)
+
+    > 返回的数组做后缀积, 然后顺序再一次前缀积即可
+
+- [41. 缺失的第一个正数](https://leetcode.cn/problems/first-missing-positive/)
+
+    > $O(n)$ 换座位: 假设 [1, n] 都在自己座位上, 如果 nums[i] 不在 i + 1 上, 说明位置不对, 给她换了:
+
+    ```cpp
+    class Solution {
+    public:
+        int firstMissingPositive(vector<int>& nums) {
+            int n = nums.size();
+            for (int i = 0; i < n; ++i) {
+                // 在 [1, n] 内
+                // nums[i] - 1 是因为索引从 0 开始
+                // nums[nums[i] - 1] == nums[i]
+                // 的前提是 nums[i] = i + 1
+                while (nums[i] >= 1 
+                    && nums[i] <= n 
+                    && nums[nums[i] - 1] != nums[i]
+                ) {
+                    // 交换: 把这里的换过去, 那里的也换过来
+                    swap(nums[i], nums[nums[i] - 1]);
+                }
+            }
+            for (int i = 0; i < n; ++i) // 最终判断第一次 nums[i] != i + 1 的
+                if (nums[i] != i + 1)   // 就是缺少 i + 1 号同学
+                    return i + 1;
+            return n + 1;               // 否则就是都有; 缺 n + 1
+        }
+    };
+    ```
