修改了主页, 新增赤石C++笔记

--- a/blog/2025/05/10/01-力扣Hot100速记.md
+++ b/blog/2025/05/10/01-力扣Hot100速记.md
@@ -221,3 +221,9 @@ tags:
         }
     };
     ```
+
+## 6. 矩阵
+
+- [73. 矩阵置零](https://leetcode.cn/problems/set-matrix-zeroes/)
+
+    > 把第一行和第一列作为标志位, 再另外使用两个变量标记第一行、列本身是否有0即可
