--- a/blog/2025/05/13/01-C++模版二阶段名称查找.md
+++ b/blog/2025/05/13/01-C++模版二阶段名称查找.md
@@ -83,3 +83,7 @@ int main() {
 ```
 
 以上~, 当然你可以整个宏, 但是大可不必, 也太丑了吧! 有这个时间还不如重构呢!
+
+拓展的、系统学习一下:
+
+- [C++里的Two phase lookup](https://izualzhy.cn/two-phase-lookup)
