新增一些网站快捷链接 | 第一次投实习经历.md 日记

--- a/blog/2025/05/14/01-最近的总结.md
+++ b/blog/2025/05/14/01-最近的总结.md
@@ -34,3 +34,10 @@ tags:
 
     > 你直接说这个问题你不会, 人家会认为你是八嘎; 但是如果你说我已经尝试了xxx/yyy/zzz但是还是不行, 请问可以帮我看看是怎么回事吗? 这样别人就会比较有兴趣: 怎么会不行呢?~ 然后就来帮你解决问题了~
 
+4. 做事情要留痕迹
+
+    > 微信聊天记录的`是的`、邮件抄送什么的
+
+5. 不要偷偷付出! 要不经意的让别人知道你在干活! 而不是偷卷!
+
+---
