设置为仅黑夜模式! 修复了归档的部分内容错位的bug

--- a/blog/2025/06/02/01-博客更新日志.md
+++ b/blog/2025/06/02/01-博客更新日志.md
@@ -15,3 +15,17 @@ tags:
 还得改一改, 再者, 明亮模式也太难看了吧, 怎么都不好看, 有点想把网页搞成仅`黑夜模式`了qwq
 
 现在简单兼容了一下白天模式了qwq... 治标不治本, 我一点都不想支持...
+
+哈哈哈, 找到了, `docusaurus.config.ts`中可以配置:
+
+```ts
+themeConfig: {
+    colorMode: {
+        defaultMode: 'dark',              // 默认黑夜模式
+        disableSwitch: true,              // 禁用模式切换按钮
+        respectPrefersColorScheme: false, // 不根据用户操作系统的偏好切换
+    },
+},
+```
+
+目前还有些问题, 就是手机上查看可以有bug, (猫娘护法的问题, 日后可以响应式的不显示猫娘就好了qwq...)
