修改博客的内容描述错误

--- a/blog/2025/06/29/01-协程小细节.md
+++ b/blog/2025/06/29/01-协程小细节.md
@@ -15,6 +15,11 @@ tags:
 
 这我需要从盘古开天辟地时候说起...
 
+> [!TIP]
+> 2025年7月6日22:11:07注: 本文内容有误: iocp不能通过本文的方法取消; (原因见: [iocp不应该使用PostQueuedCompletionStatus来取消](https://github.com/HengXin666/HXTest/issues/4))
+>
+> 但是协程小细节是真的!
+
 ## 1. io_uring API
 
 咱们直接看 io_uring 的接口设计: ([完整代码](https://github.com/HengXin666/HXTest/blob/main/src/09-os/demo/01-io_uring/02_io_uring_co.cpp))
